# BLUES-esp32

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/bemesh/: CMakeLists.txt
components/bemesh/callbacks/: CMakeLists.txt  callbacks.cpp
components/bemesh/callbacks/include/: callbacks.hpp
components/bemesh/common/: CMakeLists.txt  common.cpp
components/bemesh/common/include/: common.hpp  constant.hpp
components/bemesh/device/: CMakeLists.txt  benchmark_logger.cpp  device.cpp  device_callbacks.cpp
components/bemesh/device/include/: benchmark_logger.hpp  device.hpp  device_callbacks.hpp
components/bemesh/firmware/: CMakeLists.txt  firmware.cpp
components/bemesh/firmware/include/: firmware.hpp
components/bemesh/include/: __ble_evt_handler.h  __message_parser.h  __nodes.h  __rtable.h  __scanner.h  __status.h  __status.hpp  bemesh.h  bemesh_comms.hpp  bemesh_messages.h  bemesh_messages.hpp  bemesh_messages_v2.hpp  bemesh_status.hpp  bemesh_utils.hpp  bleClient.hpp  bleServer.hpp  callbacks.hpp  client.hpp  common.hpp  constant.hpp  gatts_table.h  kernel.h  master.hpp  message_constant.hpp  message_handler.h  message_handler.hpp  message_handler_v2.hpp  routing.h  routing.hpp  rtable.h  rtable.hpp  server.hpp  serverUtils.hpp  services.hpp  slave.hpp  utils.hpp
components/bemesh/kernel/: CMakeLists.txt  kernel.c
components/bemesh/kernel/include/: gatts_table.h  kernel.h
components/bemesh/kernel_v2/: CMakeLists.txt  core.c  core_int.c  gap_handler.c  gattc_handler.c  gatts_callbacks.c  gatts_handler.c
components/bemesh/kernel_v2/include/: core.h  core_int.h  gap_def.h  gap_device.h  gap_handler.h  gatt_def.h  gatt_handler.h  gattc_handler.h  gatts_handler.h
components/bemesh/master/: CMakeLists.txt  master.cpp
components/bemesh/master/include/: master.hpp
components/bemesh/mid-tier/: CMakeLists.txt  bemesh_messages_v2.cpp  message_handler_v2.cpp  message_handler_v3.cpp  routing.cpp  rtable.cpp
components/bemesh/mid-tier/include/: bemesh_comms.hpp  bemesh_error.hpp  bemesh_messages_v2.hpp  bemesh_status.hpp  bemesh_utils.hpp  bemesh_vectorclock.hpp  message_handler_v2.hpp  message_handler_v3.hpp  routing.hpp  rtable.hpp
components/bemesh/services/: CMakeLists.txt
components/bemesh/slave/: CMakeLists.txt  slave.cpp
components/bemesh/slave/include/: slave.hpp
components/bemesh/src/: __message_parser.cpp  __rtable.cpp  __scanner.cpp  bemesh.cpp  message_handler.cpp  routing.cpp  rtable.cpp  server.cpp
components/bemesh/src/bleClient/: CmakeLists.txt  bleClient.cpp  main_test.cpp
components/bemesh/src/bleServer/: CMakeLists.txt  bleServer.cpp  main_test.cpp
components/bemesh/src/callbacks/: CMakeLists.txt  callbacks.cpp
components/bemesh/src/common/: CMakeLists.txt  common.cpp
components/bemesh/src/kernel/: CMakeLists.txt  kernel.c
components/bemesh/src/master/: CMakeLists.txt  master.cpp
components/bemesh/src/mid-tier/: CMakeLists.txt  __message_parser.cpp  __scanner.cpp  bemesh_comms.cpp  bemesh_messages_v2.cpp  bemesh_utils.cpp  message_handler.cpp  message_handler_v2.cpp  routing.cpp  rtable.cpp
components/bemesh/src/server/: CMakeLists.txt  server.cpp  serverUtils.cpp
components/bemesh/src/services/: CMakeLists.txt  services.cpp
components/bemesh/src/slave/: CMakeLists.txt  slave.cpp
components/bemesh/src/utils/: CMakeLists.txt  utils.cpp
main/: CMakeLists.txt  esp32_ble_mesh.cpp
