idf_component_register( SRCS "message_handler.cpp"
                             "routing.cpp"
                             "rtable.cpp"
                             "bemesh_utils.cpp"
                             "bemesh_messages_v2.cpp"
                             "message_handler_v2.cpp"
                        INCLUDE_DIRS "../../include"
                        )
